Fixed the MacOS packaging.